Add statement to copyright about permission

--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,8 @@
         
         <div class="footer">
            <p><strong>Original copyright: </strong>Original Content © 2000-2011 Holger Bachert / Tel</p>
-            <p>Images available on this site are presented for historical research and educational purposes only and may not be used outside this context. All logos and other trademarks are the exclusive property of their respective holders.</p>
+            <p>As noted on the original site: <em>Images available on this site are presented for historical research and educational purposes only and may not be used outside this context. All logos and other trademarks are the exclusive property of their respective holders.</em></p>
+            <p>This project received permission from the original content curator to use the content here. The original website is still the best source of information and may be updated in the future.</p>
             <p>
                 <a href="https://github.com/rudokemper/ultima-collectors-revitalized" target="_blank" class="github-link">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
