Improve consistent styling for sidebar and pages as iframe

--- a/intro.html
+++ b/intro.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <div class="intro-container">
-        <div class="intro-header">
-            <h1>Ultima Collectors Guide</h1>
+        <div class="header">
+            <div class="header-images">
+                <img src="images/top_left.jpg" alt="Ultima Collectors Guide" />
+                <img src="images/top_right.jpg" alt="" />
+            </div>
         </div>
         
-        <div class="intro-image">
+        <div class="intro-content-wrapper">
+            <div class="intro-image">
             <a href="http://www.ultimacollectors.info/" target="_blank">
                 <img src="images/intro.jpg" alt="Ultima Collectors Guide" />
             </a>
@@ -30,6 +34,7 @@
             <p><strong>Original copyright:</strong> Original Content © 2000-2011 Holger Bachert / Tel</p>
             <p><em>As noted on the original site: Images available on this site are presented for historical research and educational purposes only and may not be used outside this context. All logos and other trademarks are the exclusive property of their respective holders.</em></p>
             <p>This project received permission from the original content curator to use the content here. The original website is still the best source of information and may be updated in the future.</p>
+        </div>
         </div>
     </div>
 </body>
