Add note about tools used

--- a/intro.html
+++ b/intro.html
@@ -26,7 +26,7 @@
         <div class="intro-content">
             <p>This resource is a revitalization of the classic <a href="http://www.ultimacollectors.info/" target="_blank">Ultima Collectors Guide</a> originally created by Holger Bachert, and last updated on December 3rd, 2011. Their comprehensive collection documented the rich history of the Ultima series of computer role-playing games across countless platforms and editions.</p>
             
-            <p>This modernized version presents the same information in a more accessible, mobile-friendly format with improved navigation and contemporary web standards. None of the content was altered in doing this, and the author has given permission to use the content here, but the original website is still the best source of information and may be updated in the future.</p>
+            <p>This modernized version presents the same information in a more accessible, mobile-friendly format with improved navigation and contemporary web standards. It was done using Python and BeautifulSoup.  None of the content was altered in doing this, and the author has given permission to use the content here, but the original website is still the best source of information and may be updated in the future.</p>
         </div>
         
         <div class="disclaimer-section">
