Move maps out of map-images dir

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             if (isDesktop()) {
                 // Prevent default navigation and load in iframe for desktop
                 event.preventDefault();
-                loadPageInFrame('map-images/index.html');
+                loadPageInFrame('maps.html');
                 updateActiveLink(null);
             }
             // On mobile, let the default behavior happen (navigate to page)
@@ -1548,7 +1548,7 @@
   </li>
   <!-- Map Index -->
   <li>
-    <a href="map-images/index.html" class="category-toggle level-0" onclick="handleMapIndexClick(event)" style="cursor: pointer; text-decoration: none; color: #2c3e50 !important; font-size: 1.3em; font-weight: bold; display: block; padding: 8px 0;">
+    <a href="maps.html" class="category-toggle level-0" onclick="handleMapIndexClick(event)" style="cursor: pointer; text-decoration: none; color: #2c3e50 !important; font-size: 1.3em; font-weight: bold; display: block; padding: 8px 0;">
       <span class="toggle-icon" id="icon-map-index">🗺️</span> Map Index
     </a>
   </li>
