--- a/maps.html
+++ b/maps.html
@@ -1182,7 +1182,7 @@
                         <img alt="Ultima VII Part 2 Map" class="map-image" loading="lazy"
                             onclick="openLightbox(this.src, this.alt)" src="map-images/u72_generic_2_map.jpg" />
                         <div class="map-info">
-                            <strong>Earliest release: 1993</strong><br /><br /><strong>Map Type: Cloth</strong>
+                            <strong>Earliest release: 1993</strong><br /><br /><strong>Map Type: Paper</strong>
                             <div class="map-description">Like many of the earlier EA releases the EU package of Serpent
                                 Isle looks considerably cheaper than its US counterpart. It contains a paperprint
                                 instead of the cloth map and comes with a black &amp; white manual and the usual EA box
