--- a/maps.html
+++ b/maps.html
@@ -627,7 +627,7 @@
                         <img alt="Ultima IV Map" class="map-image" loading="lazy"
                             onclick="openLightbox(this.src, this.alt)" src="map-images/u4_fmtowns_1_map.jpg" />
                         <div class="map-info">
-                            <strong>Earliest release: 1992</strong><br /><br /><strong>Map Type: Cloth</strong>
+                            <strong>Earliest release: 1992</strong><br /><br /><strong>Map Type: Cardboard</strong>
                             <div class="map-description">Fujitsu Japan released Ultima IV for their 'FM-Towns' computer
                                 system in 1992. The game was fully localized and redesigned for this system (it comes on
                                 CD) and benefited from its audio/visual capabilities.
