Comments for map sections

--- a/maps.html
+++ b/maps.html
@@ -35,7 +35,7 @@
                     most accurate information. Click "Show All Releases" to see the complete release history for each
                     map.</p>
             </div>
-            <!-- Maps sorted by earliest release date -->
+            <!-- Ultima Main Series -->
             <div class="game-section">
                 <h3>Ultima I</h3>
                 <div class="map-grid">
@@ -1451,6 +1451,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Ultima Underworld Series -->
             <div class="game-section">
                 <h3>Ultima Underworld</h3>
                 <div class="map-grid">
@@ -1680,6 +1681,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Worlds of Ultima Series -->
             <div class="game-section">
                 <h3>Savage Empire</h3>
                 <div class="map-grid">
@@ -1829,6 +1831,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Ultima Online -->
             <div class="game-section">
                 <h3>Ultima Online</h3>
                 <div class="map-grid">
@@ -2340,6 +2343,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Compilations -->
             <div class="game-section">
                 <h3>Ultima Trilogy I-III</h3>
                 <div class="map-grid">
