Fix: cardboard map for trilogy

--- a/maps.html
+++ b/maps.html
@@ -4828,7 +4828,7 @@
               />
               <div class="map-info">
                 <strong>Earliest release: 1992</strong><br /><br /><strong
-                  >Map Type: Cloth</strong
+                  >Map Type: Cardboard</strong
                 >
                 <div class="map-description">
                   The 'Second Trilogy' compilation consisting of Ultima IV - VI
