--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
           </li>
           <!-- Map Index -->
           <li>
-            <a href="maps.html" class="category-toggle level-0" onclick="handleMapIndexClick(event)"
+            <a href="maps.html" target="_blank" class="category-toggle level-0"
               style="cursor: pointer; text-decoration: none; color: #2c3e50 !important; font-size: 1.3em; font-weight: bold; display: block; padding: 8px 0;">
               <span class="toggle-icon" id="icon-map-index">🗺️</span> Map Index
             </a>
