Add credit note to maps page too

--- a/maps.html
+++ b/maps.html
@@ -48,6 +48,26 @@
             </select>
           </div>
         </div>
+        <div class="description disclaimer-section">
+          <h3>Important Notice</h3>
+          <p>
+            <strong>Original copyright:</strong> Original Content © 2000-2011
+            Holger Bachert / Tel
+          </p>
+          <p>
+            <em
+              >As noted on the original site: Images available on this site are
+              presented for historical research and educational purposes only and
+              may not be used outside this context. All logos and other trademarks
+              are the exclusive property of their respective holders.</em
+            >
+          </p>
+          <p>
+            This project received permission from the original content curator to
+            use the content here. The original website is still the best source of
+            information and may be updated in the future.
+          </p>
+        </div>
         <!-- Ultima Main Series -->
         <div class="game-section">
           <h3>Ultima I</h3>
